<resources>
    <string name="app_name">Log Book App</string>
    <string name="app_title">LOGBOOK APP</string>
    <string name="simple_calculator">Calculator</string>
    <string name="image_slider">Images</string>
    <string name="contacts">Contacts</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">x</string>
    <string name="divide">/</string>
    <string name="clear">C</string>
    <string name="equal">=</string>
    <string name="image_slider_view">Image Slider View</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="add_new">+ Add New</string>
    <string name="all_contacts">All Contacts</string>
    <string name="add_new_button">Add New Button</string>
    <string name="add_new_contact">Add New Contact</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="choose_date_of_birth">Choose Date of Birth</string>
    <string name="save">SAVE</string>
    <string name="contact_profile">Contact Profile</string>
</resources>