<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorActivity">

    <TextView
        android:id="@+id/calculator_display"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="32dp"
        android:paddingVertical="16dp"
        android:textSize="36sp"
        android:text="@string/zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.178" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        style="?android:attr/buttonBarStyle"
        android:layout_width="360dp"
        android:layout_height="81dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0">

        <Button
            android:id="@+id/btn_one"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/design_default_color_primary_dark"
            android:padding="16dp"
            android:text="@string/one"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_two"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/design_default_color_primary_dark"
            android:padding="16dp"
            android:text="@string/two"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_three"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/design_default_color_primary_dark"
            android:padding="16dp"
            android:text="@string/three"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_minus"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/design_default_color_primary_dark"
            android:padding="16dp"
            android:text="@string/minus"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        style="?android:attr/buttonBarStyle"
        android:layout_width="360dp"
        android:layout_height="81dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
        app:layout_constraintVertical_bias="0">

        <Button
            android:id="@+id/btn_four"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/design_default_color_primary_dark"
            android:padding="16dp"
            android:text="@string/four"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_five"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/design_default_color_primary_dark"
            android:padding="16dp"
            android:text="@string/five"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_six"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/design_default_color_primary_dark"
            android:padding="16dp"
            android:text="@string/six"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_multiple"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/design_default_color_primary_dark"
            android:padding="16dp"
            android:text="@string/multiply"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        style="?android:attr/buttonBarStyle"
        android:layout_width="360dp"
        android:layout_height="81dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0">

        <Button
            android:id="@+id/btn_clear"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/design_default_color_primary_dark"
            android:padding="16dp"
            android:text="@string/clear"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_zero"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/design_default_color_primary_dark"
            android:padding="16dp"
            android:text="@string/zero"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_equal"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/design_default_color_primary_dark"
            android:padding="16dp"
            android:text="@string/equal"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_plus"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/design_default_color_primary_dark"
            android:padding="16dp"
            android:text="@string/plus"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        style="?android:attr/buttonBarStyle"
        android:layout_width="360dp"
        android:layout_height="81dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculator_display"
        app:layout_constraintVertical_bias="0.05">

        <Button
            android:id="@+id/btn_seven"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/design_default_color_primary_dark"
            android:padding="16dp"
            android:text="@string/seven"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_eight"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/design_default_color_primary_dark"
            android:padding="16dp"
            android:text="@string/eight"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_nine"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/design_default_color_primary_dark"
            android:padding="16dp"
            android:text="@string/nine"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_divide"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/design_default_color_primary_dark"
            android:padding="16dp"
            android:text="@string/divide"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>