<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddContactActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/add_new_contact"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#360A84"
        android:textSize="26sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintBottom_toTopOf="@+id/name_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.62" />

    <EditText
        android:id="@+id/name_input"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/enter_name"
        android:inputType="text"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.137" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/enter_email_address"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_input"
        app:layout_constraintVertical_bias="0.063" />

    <TextView
        android:id="@+id/date_picker_display"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:background="@drawable/my_border"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:text="@string/choose_date_of_birth"
        android:textColor="#360A84"
        android:textStyle="bold"
        android:paddingVertical="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/btn_save_contact"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:background="@drawable/my_bg"
        android:paddingHorizontal="32dp"
        android:paddingVertical="16dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_picker_display"
        app:layout_constraintVertical_bias="0.117" />

</androidx.constraintlayout.widget.ConstraintLayout>